# bongobot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES_GUIDE.md  LICENSE  README.md  README.zh-CN.md  SETUP_GUIDE.md  gamebot.py  pyproject.toml  quick_setup.py  requirements-dev.txt  requirements.txt  setup.py
assets/: README.en.md  README.md
bongobot/: __init__.py  __main__.py  automation.py  config_loader.py  idle.py  logger_setup.py  main.py  runner.py
docs/: README.md
docs/en/: usage.md
docs/zh-CN/: usage.md
examples/: config.example.yaml
scripts/: check_environment.py  setup_environment.py
tests/: __init__.py  test_config_loader.py
